--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "stop": "npx pm2 stop ecosystem.config.js"
   },
   "dependencies": {
+    "@koa/router": "^9.3.1",
     "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
+    "koa-bodyparser": "^4.2.1"
   },
   "devDependencies": {
     "@types/koa": "^2.0.48",
